--- a/css/style.css
+++ b/css/style.css
@@ -66,11 +66,11 @@ nav {
       float:left;
       display: flex;
       flex-wrap:wrap;
-      flex-direction: column;
+      flex-direction:column;
       width:14rem;
       border:.0625rem solid #333;
       background-color:#8FB0D0;
-      position:fixed;
+      position:absolute;
 }
 
 nav img {
@@ -236,3 +236,4 @@ footer a:hover {
     font-size:.75rem;
     float:left;
 }
+
